--- a/comingsoon.html
+++ b/comingsoon.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Coming Soon</title>
+    <title class="">Coming Soon</title>
 </head>
-<body>
-    
+<body class="max-auto bg-info text-white ">
+    <div class="container">
+        
+        <h1 class="display-1 mt-5">Coming Soon</h1>
+        <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque explicabo ad repellat. Corporis, aspernatur quod eaque debitis ratione officiis! Quis tempora nesciunt deserunt velit odit, ad omnis perferendis cum. Iste?
+        </p>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="enter your e-mail to stay updated" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <div class="input-group-append">
+              <button class="btn btn btn-primary" type="button" id="button-addon2">Sign Up!</button>
+            </div>
+          </div>
+    </div>
 </body>
 </html>
