--- a/js-conf_home.html
+++ b/js-conf_home.html
@@ -234,13 +234,43 @@
                 <div class="w-100"></div>
             </div>
             </div>
-
-
-
-
-
-
-
+    <br>
+    <br>  
+    <br>
+    <div class="container">
+            <div class="row">
+              <div class="col">
+                    <div class="container">
+                            <div class="row">
+                              <div class="col">
+                                1 of 3
+                              </div>
+                              <div class="col">
+                                
+                              </div>
+                              <div class="col">
+                                    <div class="dropdown">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                              Other Confs
+                                            </button>
+                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                              <a class="dropdown-item" href="#">Action</a>
+                                              <a class="dropdown-item" href="#">Another action</a>
+                                              <a class="dropdown-item" href="#">Something else here</a>
+                                            </div>
+                                          </div>
+                              </div>
+                            </div>
+                          </div>
+              </div>
+              <div class="col">
+                
+              </div>
+              <div class="col">
+                3 of 3
+              </div>
+            </div>
+          </div>
 
 
 
